// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabGroup/> snapshot should match snapshot 1`] = `
<TabGroup
  orientation="horizontal"
>
  <div
    aria-orientation="horizontal"
    className="md-tab-group-wrapper"
    data-orientation="horizontal"
    data-spaced="false"
    role="tablist"
  >
    <Tab
      key=".$0"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabA
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$1"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabB
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$2"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabC
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
  </div>
</TabGroup>
`;

exports[`<TabGroup/> snapshot should match snapshot when spaced 1`] = `
<TabGroup
  orientation="horizontal"
  spaced={false}
>
  <div
    aria-orientation="horizontal"
    className="md-tab-group-wrapper"
    data-orientation="horizontal"
    data-spaced="false"
    role="tablist"
  >
    <Tab
      key=".$0"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabA
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$1"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabB
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$2"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabC
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
  </div>
</TabGroup>
`;

exports[`<TabGroup/> snapshot should match snapshot with aria-label 1`] = `
<TabGroup
  aria-label="my aria label"
  orientation="horizontal"
>
  <div
    aria-label="my aria label"
    aria-orientation="horizontal"
    className="md-tab-group-wrapper"
    data-orientation="horizontal"
    data-spaced="false"
    role="tablist"
  >
    <Tab
      key=".$0"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabA
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$1"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabB
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$2"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabC
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
  </div>
</TabGroup>
`;

exports[`<TabGroup/> snapshot should match snapshot with className 1`] = `
<Tab
  className="example-class"
>
  <ButtonSimple
    className="md-tab-wrapper example-class"
    data-active={false}
    data-disabled={false}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper example-class md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<TabGroup/> snapshot should match snapshot with id 1`] = `
<Tab
  id="example-id"
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;

exports[`<TabGroup/> snapshot should match snapshot with orientation = vertical 1`] = `
<TabGroup
  orientation="vertical"
>
  <div
    aria-orientation="vertical"
    className="md-tab-group-wrapper"
    data-orientation="vertical"
    data-spaced="false"
    role="tablist"
  >
    <Tab
      key=".$0"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabA
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$1"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabB
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$2"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabC
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
  </div>
</TabGroup>
`;

exports[`<TabGroup/> snapshot should match snapshot with role 1`] = `
<TabGroup
  orientation="horizontal"
  role="tablist"
>
  <div
    aria-orientation="horizontal"
    className="md-tab-group-wrapper"
    data-orientation="horizontal"
    data-spaced="false"
    role="tablist"
  >
    <Tab
      key=".$0"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabA
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$1"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabB
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
    <Tab
      key=".$2"
      onKeyDown={[Function]}
      role="tab"
    >
      <ButtonSimple
        className="md-tab-wrapper"
        data-active={false}
        data-disabled={false}
        onKeyDown={[Function]}
        role="tab"
      >
        <FocusRing>
          <FocusRing
            focusClass="md-focus-ring-wrapper children"
            focusRingClass="md-focus-ring-wrapper children"
          >
            <button
              className="md-tab-wrapper md-button-simple-wrapper"
              data-active={false}
              data-disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragStart={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="tab"
              type="button"
            >
              <PrimitiveConverter
                fontStyle="subheader-secondary"
              >
                <Text
                  type="subheader-secondary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-secondary"
                  >
                    tabC
                  </h3>
                </Text>
              </PrimitiveConverter>
            </button>
          </FocusRing>
        </FocusRing>
      </ButtonSimple>
    </Tab>
  </div>
</TabGroup>
`;

exports[`<TabGroup/> snapshot should match snapshot with style 1`] = `
<Tab
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-tab-wrapper"
    data-active={false}
    data-disabled={false}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-tab-wrapper md-button-simple-wrapper"
          data-active={false}
          data-disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</Tab>
`;
